--- a/mapas/src/app/app.component.html
+++ b/mapas/src/app/app.component.html
@@ -1,1 +1,7 @@
-<mat-slider class="col-12" style="background-color: red;" min="1" max="100" step="1" value="1"></mat-slider>
+<mat-toolbar color="primary">
+    <span>Mapas</span>
+</mat-toolbar>
+
+<div class="main-container">
+    <app-mapa></app-mapa>
+</div>
